Bug 460289 - Opening the detailed progress window does nothing
Summary: Opening the detailed progress window does nothing
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.21.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 462540 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-12 09:50 UTC by Albert Astals Cid
Modified: 2022-12-11 11:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2022-10-12 09:50:22 UTC
While downloading email, pressing the detailed progress window button (small ^ button in the title bar) used to show a popup that contained progress on how download was going.

Pressing that button nowadays does nothing other than turn it to a downwards facing arrow
Comment 1 David Redondo 2022-10-18 06:40:21 UTC
Same for me
Comment 2 Kamil Dudka 2022-12-07 09:12:50 UTC
*** Bug 462540 has been marked as a duplicate of this bug. ***
Comment 3 Kamil Dudka 2022-12-09 10:13:24 UTC
I am still affected by the bug with kmail-5.21.3.

I think the progress popup is there but it is just not visible.  If I enable "message preview pane below the message list" in Settings -> Configure KMail -> Appearance -> Layout and push the "Show Message Structure" button available via Settings -> Configure Toolbars, I can see a thin stripe of the progress popup in the border of the Message Structure pane.  Then if change height of the Message Structure pane, I can see other parts of the hidden progress popup.
Comment 4 Laurent Montel 2022-12-10 18:56:21 UTC
Git commit 437295a534eca2907e749f18d8d895da50d343b9 by Laurent Montel.
Committed on 10/12/2022 at 18:55.
Pushed by mlaurent into branch 'release/22.12'.

Fix bug 460289:  Opening the detailed progress window does nothing
FIXED-IN: 5.22.1

M  +4    -1    src/kmmainwin.cpp
M  +1    -1    src/kmmainwin.h

https://invent.kde.org/pim/kmail/commit/437295a534eca2907e749f18d8d895da50d343b9
Comment 5 Kamil Dudka 2022-12-11 11:04:51 UTC
I have rebuilt kmail-5.21.3 with the fix mentioned in comment #4 and the progress popup now works again.  Thanks!