Fix bug 460289:  Opening the detailed progress window does nothing

BUG: 460289
FIXED-IN: 5.22.1